<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:key="love_status"
        android:title="@string/love_status"
        android:summary="@string/love_status_help"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="inspirational_status"
        android:title="@string/inspirational_status"
        android:summary="@string/inspirational_status_help"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="funny_status"
        android:title="@string/funny_status"
        android:summary="@string/funny_status_help"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="english"
        android:title="@string/english"
        android:summary="@string/english_help"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="show_memes"
        android:title="@string/show_memes"
        android:summary="@string/show_memes_help"
        android:defaultValue="true" />

</PreferenceScreen>